[package]
name = "xhup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
